--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -36,8 +36,7 @@ show_info: true
 <div class="layout--home">
   {%- include paginator.html -%}
 </div>
-<script>
-  {% - include scripts / home.js -%}
-</script>
+<script src="scripts/home.js"></script>
+
 
 {{ content }}
