tried fixing home

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -36,7 +36,8 @@ show_info: true
 <div class="layout--home">
   {%- include paginator.html -%}
 </div>
-<script src="scripts/home.js"></script>
-
+<script>
+  {% - include scripts / home.js -%}
+</script>
 
 {{ content }}
